force-app/main/default/objects/Async_Agent_Session__c/Async_Agent_Session__c.object-meta.xml
<CustomObject>
    <label>Async Agent Session</label>
    <nameField>
        <displayFormat>ASY-{0000}</displayFormat>
        <label>Async Agent Session Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Async Agent Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject> 