force-app/main/default/objects/Async_Agent_Session__c/fields/Agent_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_API_Name__c</fullName>
    <label>Agent API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField> 