force-app/main/default/objects/Async_Agent_Session__c/fields/Agent_Response__c.field-meta.xml
<CustomField>
    <fullName>Agent_Response__c</fullName>
    <label>Agent Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField> 