force-app/main/default/objects/Async_Agent_Session__c/fields/Processing_Time_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Processing_Time_Seconds__c</fullName>
    <label>Processing Time (Seconds)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>