force-app/main/default/objects/Async_Agent_Session__c/fields/User_Message__c.field-meta.xml
<CustomField>
    <fullName>User_Message__c</fullName>
    <label>User Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField> 