force-app/main/default/objects/Async_Agent_Session__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <allCustomerPortalUsers>false</allCustomerPortalUsers>
        <allInternalUsers>true</allInternalUsers>
        <allPartnerUsers>false</allPartnerUsers>
        <channelProgramGroup/>
        <group/>
        <groups/>
        <managerSubordinates>false</managerSubordinates>
        <managers>false</managers>
        <portalRole/>
        <portalRoleAndSubordinates/>
        <queue/>
        <role/>
        <roleAndSubordinates/>
        <roleAndSubordinatesInternal/>
        <subordinates/>
        <territory/>
        <territoryAndSubordinates/>
        <territoryAndSubordinatesInternal/>
        <users/>
    </sharedTo>
</ListView> 